testsuite/tests/properties/invalid_call/field.lkt
import common

class BarNode: FooNode {
    v: LogicVar

    @ignored fun p(): Array[LogicVar] = [node.v()]
}
